# temp

./: .env  .env.example  .gitignore  CMakeLists.txt  Dockerfile  MakeFile  Pipfile  README.md  README_CPP.md  alembic.ini  build.sh  create_admin.py  device_provisioner.cpp  device_provisioner.py  install.sh  package-lock.json  package.json  requirements.txt  run.sh  setup_env.sh  tailwind.config.ts  tsconfig.json
.github/: deploy.yml
.github/workflows/: deploy.yml
app/: main.py
app/api/: deps.py
app/core/: config.py  security.py
app/crud/: __init__.py  audit_log.py  base.py  crud_ai_model.py  crud_city_eye_analytics.py  customer.py  customer_solution.py  device.py  device_command.py  device_solution.py  job.py  password_reset_token.py  solution.py  solution_package.py  user.py
app/db/: async_session.py  base.py  session.py
app/middleware/: throttling.py
app/models/: __init__.py  ai_model.py  audit_log.py  customer.py  customer_solution.py  device.py  device_command.py  device_solution.py  job.py  password_reset_token.py  solution.py  solution_package.py  solution_package_model.py  user.py
app/schemas/: __init__.py  ai_model.py  audit.py  customer.py  customer_solution.py  device.py  device_command.py  device_solution.py  job.py  solution.py  solution_package.py  user.py
app/utils/: audit.py  (+11 more)
bootstrap/: main.tf  terraform.tfvars  variables.tf
configs/: city-eye.yaml  flow-eye.yaml  xlines_cfg.json
fluent-bit/: fluent-bit.conf  get_temperature.sh  parsers.conf  readme.md
locust/: .env.example  README.md  endpoints-v2.yml  endpoints.yml  locustfile.py  mixed_endpoints.txt  params.json  requirements.txt  target_endpoints.txt  targets.sample.txt
migrations/: env.py
src/: auth.config.ts  auth.ts  main.py  middleware.ts
tests/: README.md  conftest.py  pytest.ini  test_db.py  test_utils.py
(+592 files in other folders)
